# python-lrc-adjuster

./: .gitignore  .gitleaks.toml  README.md  lrc-adjuster.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: security.yml
lrc_adjuster/: adjuster.py
