[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lrc-adjuster"
version = "0.1.0"
description = "Python package to adjust timestamps in LRC files."
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
lrc-adjuster = "lrc_adjuster.adjuster:main"
